--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -2,7 +2,11 @@
     <ul>
         {% for question in lasest_question_list %}
             <li>
-                <a href="/polls/{{ question.id }}/">{{ question.question_text }}</a>
+{#            This is the hard code URL#}
+{#                <a href="/polls/{{ question.id }}/">{{ question.question_text }}</a>#}
+{#                <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>#}
+{#                please see `app_name = 'polls'` in polls.urls.py it is the namespacing URL names #}
+                <a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
             </li>
         {% endfor %}
     </ul>
