--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,12 +1,11 @@
-{% if lasest_question_list %}
+{% if latest_question_list %}
     <ul>
-        {% for question in lasest_question_list %}
+        {% for question in latest_question_list %}
             <li>
-{#            This is the hard code URL#}
-{#                <a href="/polls/{{ question.id }}/">{{ question.question_text }}</a>#}
-{#                <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>#}
-{#                please see `app_name = 'polls'` in polls.urls.py it is the namespacing URL names #}
-                <a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
+{#            This is the hard code URL 用 view的名字代替 RUL的硬编码. #}
+{#              <a href="/polls/{{ question.id }}/"           >{{ question.question_text }}</a>#}
+{#              polls 是 URL名称的命名空间.不然有好多 detail, Django 就不知道哪个在这里调用了.#}
+                <a href="{% url 'polls:detail' question.id %}">{{ question.id }}:{{ question.question_text }}</a>
             </li>
         {% endfor %}
     </ul>
