added new background

--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,6 +1,6 @@
 li a {
-    color: green;
+    color: #fffdfe;
 }
 body {
-    background: white url("images/background.gif") no-repeat;
+    background: white url("images/background.png") no-repeat;
 }
