--- a/myApp/templates/myApp/student.html
+++ b/myApp/templates/myApp/student.html
@@ -9,7 +9,8 @@
     <li>name: {{ student.sname }}</li>
     <li>student: {{ student.sgender }}</li>
     <li>girlnumber: {{ student.sage }}</li>
-    <li>bodyNumebr:{{ student.scontend }}</li>
 </ul>
+
+<a href="{% url "students-all" %}">Back to All </a>
 </body>
 </html>
